# cato_networks

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  GAPS.md  Makefile  PROJECT_BRIEF.md  README.md  SPEC.md  TESTING.md  TICKETS.md  docker-compose.yml  main.py  pyproject.toml  pyrightconfig.json  trading_agent_notes.md
.github/workflows/: ci.yml
config/: risk_policy.yaml  settings.yaml
data/bars/: AAPL.csv  AMD.csv  GOOGL.csv  META.csv  MSFT.csv  NVDA.csv  SPY.csv
data/cassettes/: eval.jsonl
data/news/: corpus.json
data/windows/: default.yaml
docs/: PROJECT_UNDERSTANDING.md  REFACTOR_TICKETS.md  REPO_AUDIT.md  agents_and_tools.md  eval_report.md  runbook.md  technical_overview.md  telegram_flow.md
eval/: __init__.py  metrics.py  replay.py  report.py
files/: ARCHITECTURE.md  TICKETS.md
infra/: README.md  main.tf  variables.tf
migrations/: README.md  alembic.ini  env.py
migrations/versions/: 0001_initial.py  0002_news_chunks_384dim.py  0003_pending_runs.py
reports/: 2024-10-23.xlsx  2026-06-23.xlsx  report_2024-10-23.txt
src/firm/: __init__.py  cli.py  composition.py  constants.py
src/firm/adapters/: README.md  __init__.py  embeddings.py  evidence_pgvector.py  excel_report.py  fakes.py  llm_anthropic.py  llm_cassette.py  llm_offline.py  llm_token_budget.py  market_data_frozen.py  market_data_live.py  slack_report.py  telegram.py
src/firm/agents/: README.md  __init__.py  _cycle_format.py  base.py  execution.py  portfolio_manager.py  reporting.py  research.py  (+1 more)
tests/eval/: test_eval.py
tests/integration/: test_hitl.py  test_ledger.py  test_mandatory.py  test_rag.py
tests/unit/: test_agents.py  test_approval_channels.py  test_approval_recording.py  test_bot.py  test_calendar.py  test_cassette.py  test_cli.py  test_config.py  test_debater.py  test_domain.py  test_fakes.py  test_guardrails.py  test_hitl_decision.py  test_hitl_nodes.py  test_hitl_override.py  test_market_data_live.py  test_news_ingestion.py  test_observability.py  test_reporting.py  test_strategy.py  test_telegram_hitl.py  test_tools.py  test_web_api.py
(+134 files in other folders)
