[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "the-ai-firm"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "langgraph>=0.3",
  "langgraph-checkpoint-postgres>=2.0",
  "langchain-anthropic>=0.3",
  "anthropic>=0.40",
  "pydantic>=2.7",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.2",
  "pgvector>=0.3",
  "openpyxl>=3.1",
  "slack-sdk>=3.27",
  "opentelemetry-sdk>=1.25",
  "opentelemetry-exporter-otlp>=1.25",
  "langfuse>=4.0",
  "pandas>=2.2",
  "pandas-market-calendars>=4.3",
  "pyarrow>=16.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
embeddings = [
  "voyageai>=0.2",
]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "testcontainers[postgres]>=4.7",
  "ruff>=0.4",
  "mypy>=1.10",
  "pytest-cov>=5.0",
  "types-PyYAML>=6.0",
]

[project.scripts]
firm = "firm.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/firm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--strict-markers"
markers = [
  "integration: marks tests requiring a live Postgres instance",
  "eval: marks eval harness tests",
]

[tool.mypy]
strict = true
packages = ["firm"]
mypy_path = "src"
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["pandas", "pandas_market_calendars"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pgvector.psycopg"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["openpyxl", "openpyxl.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["slack_sdk", "slack_sdk.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "PT", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["firm"]

[tool.coverage.run]
source = ["src/firm"]
branch = true

[tool.coverage.report]
fail_under = 0
show_missing = true
